tests/e2e/service_event_output_readonly.error
Error: syntax error in story at line 3, column 3

3|        req = 2
          ^^^^^

E0100: Can't assign `int` to `Object`
